k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: student-management-service

spec:
  selector:
    app: student-management

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
