k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-frontend-service

spec:
  selector:
    app: student-management-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

  type: NodePort
